DOC-1860: 6.4 Enterprise Docs release (#2655)
* Added draft#10 release-notes 6.4
draft for TINY-9244
draft for TINY-9454
draft for TINY-9598
draft for TINY-9532
draft for TINY-9429
draft for TINY-9585
draft for TINY-9523
draft for TINY-9523 v2
draft for TINY-9595
draft for TINY-9560

* Removal of duplicate placeholders

* Added draft#11 release-notes 6.4
draft for TINY-9528
draft for TINY-9530
draft for TINY-9600

* Added draft#12 release-notes 6.4
draft for TINY-9520
draft for TINY-9414

* Added draft#13 release-notes 6.4
draft for TINY-9517
draft for TINY-9497
draft for TINY-9497

* DOC-1986: Copy changes to release-notes prior to creating PR

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: Andrew Herron <andrew.herron@tiny.cloud>

* Update modules/ROOT/pages/6.4-release-notes.adoc

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: shanmen-tiny <shanmen.ng@tiny.cloud>

* Update modules/ROOT/pages/6.4-release-notes.adoc

Co-authored-by: shanmen-tiny <shanmen.n

--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -11,10 +11,15 @@ This section lists the releases for {productname} 6 and the changes made in each
 
 a|
 [.lead]
+xref:6.4.1-release-notes.adoc#overview[{productname} 6.4.1]
+
+Release notes for {productname} 6.4.1
+
+a|
+[.lead]
 xref:6.3.2-release-notes.adoc#overview[{productname} 6.3.2]
 
 Release notes for {productname} 6.3.2
-
 
 a|
 [.lead]
@@ -22,20 +27,17 @@ xref:6.3-release-notes.adoc#overview[{productname} 6.3]
 
 Release notes for {productname} 6.3
 
-
 a|
 [.lead]
 xref:6.2-release-notes.adoc#overview[{productname} 6.2]
 
 Release notes for {productname} 6.2
 
-
 a|
 [.lead]
 xref:6.1.2-release-notes.adoc#overview[{productname} 6.1.2]
 
 Release notes for {productname} 6.1.2
-
 
 a|
 [.lead]
