DOC-1952: Fix broken links causing errors

--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -65,7 +65,7 @@ This update adds a new **Dark/light mode** button to toggle between either dark 
 
 This update adds a new **Fullscreen** button to toggle between fullscreen and dialog modes.
 
-NOTE: For the Advanced Code Editor to offer a full-screen mode, it requires the xref:fullscreen.adoc[Full screen] plugin and requires {pluginname} to be running in xref:advcode.adoc#advcode_inline[inline mode].
+NOTE: For the Advanced Code Editor to offer a full-screen mode, it requires the xref:fullscreen.adoc[Full screen] plugin and to be running in xref:advcode.adoc#advcode_inline[inline mode].
 
 NOTE: For the Advanced Code Editor to offer a **Copy** button, it requires a https://developer.mozilla.org/en-US/docs/Web/Security/Secure_Contexts[*secure contexts*].
 
