--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -410,9 +410,9 @@
 **** xref:6.4.1-release-notes.adoc#known-issues[Known issues]
 *** TinyMCE 6.3.2
 **** xref:6.3.2-release-notes.adoc#overview[Overview]
-**** xref:6.3.2-release-notes.adoc:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
+**** xref:6.3.2-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
 **** xref:6.3.2-release-notes.adoc#bug-fix[Bug fix]
-**** xref:6.3.2-release-notes.adoc:security-fixes[Security fixes]
+**** xref:6.3.2-release-notes.adoc#security-fixes[Security fixes]
 *** TinyMCE 6.3
 **** xref:6.3-release-notes.adoc#overview[Overview]
 **** xref:6.3-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
