--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -619,7 +619,7 @@ As a result, the `onSetup` function for custom group toolbar buttons now runs co
 
 In {productname} 6.0 and later, elements could be dropped onto descendants of an element with a `contenteditable=false` attribute.
 
-In {productname} 6.4.1, changes were made to prevent any descendant of a `contenteditable="false"` element from being a valid drop target. Now, elements are unable to be dropped onto any descendant of a `contenteditable="false"` element across all browsers.
+In {productname} 6.4.1, changes were made to prevent descendants of an element with a `contenteditable="false"` attribute from being a valid drop target. As of this release, elements cannot be dropped onto such descendant elements across all supported browsers.
 
 === Checkmark did not show in menu color swatches
 //#TINY-9395
