--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -794,7 +794,7 @@ In {productname} 6.4.1, table is no longer selectable or editable by table UI an
 
 In previous {productname} versions, tables within a root element with a `contenteditable="false"` attribute could be unexpectedly modified using commands.
 
-{productname} 6.4.1 now blocks all table commands when the selection is in a table in a `contenteditable="false"` root, thereby preventing unwanted modifications.
+{productname} 6.4.1 now blocks all table commands when the selection is in a table which is, itself, within an element with a `contenteditable="false"` attribute set, preventing unwanted modifications.
 
 _xref:editor-command-identifiers.adoc[Read more on editor commands]_
 
